<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".Registration">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"


        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/registration_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_margin="8dp"

                android:text="@string/registration"
                android:textAlignment="center"
                android:textColor="@color/purple_700"
                android:textSize="48sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/name_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_margin="8dp"

                android:hint="@string/name"
                android:inputType="textCapWords" />

            <EditText
                android:id="@+id/lastName_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_margin="8dp"

                android:hint="@string/last_name"
                android:inputType="textCapWords" />

            <EditText
                android:id="@+id/age_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_margin="8dp"

                android:hint="@string/age"
                android:inputType="number" />

            <EditText
                android:id="@+id/email_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_margin="8dp"

                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/password_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_margin="8dp"

                android:hint="@string/password_reg"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/button_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_margin="8dp"
                android:padding="8dp"

                android:text="@string/sing_in"
                android:textSize="20sp" />


        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>