<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/MessengerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/messenger"
        android:textSize="48sp"
        android:textStyle="bold"
        android:textColor="@color/purple_700"


        app:layout_constraintBottom_toTopOf="@+id/email_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/email_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:hint="@string/your_email"

        app:layout_constraintBottom_toTopOf="@+id/password_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/password_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:hint="@string/password"

        app:layout_constraintBottom_toTopOf="@+id/Button_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_login" />

    <Button
        android:id="@+id/Button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/login"
        android:textSize="20sp"
        android:padding="8dp"
        android:layout_margin="8dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_login" />

    <TextView
        android:id="@+id/forgotPassword_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:paddingTop="8dp"
        android:text="@string/forgot_password"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Button_login" />

    <TextView
        android:id="@+id/registration_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:paddingTop="8dp"
        android:text="@string/registration_login"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Button_login" />

</androidx.constraintlayout.widget.ConstraintLayout>